 - SDL: Fix joystick initialization on BSD
 - SDL: Fix potential joystick crash in games with rumble
 - SDL: Fix axes being mapped wrong
 - Qt: Fix initial state of key mapping
 - Shaders: Fix AGS-001 shader with some bad drivers
 - GBA Memory: Fix mirror on non-overdumped Classic NES games
 - Qt: Initialize m_useBios
 - GBA Serialize: Fix memory corruption bug in GBAExtdataSerialize
Misc:
 - GBA: Slightly optimize GBAProcessEvents
 - Qt: Add preset for DualShock 4
 - SDL: Remove default gamepad mappings
 - Qt: Update 360 input profile on OS X to reflect newer drivers
 - Qt: Remove use of NaN
 - 3DS: Use blip_add_delta_fast for a small speed improvement

0.4.0: (2016-02-02)
Features:
 - Officially supported ports for the Nintendo 3DS, Wii, and PlayStation Vita
 - I/O viewer
 - Booting of multiboot images
 - Customization of GIF recording
 - Libretro: Cheat code support
 - Support for GLSL shaders
 - ROM information view
 - Support for VBA-style cheat codes
 - Savestates now store creation timestamps
 - Key autofire
 - Libretro: Allow blocking opposing directional input
 - OpenEmu core for OS X
 - Libretro: Settings for using BIOS and skipping intro
 - Libretro: Customizable idle loop removal
 - Implemented cycle counting for sprite rendering
 - Cleaner, unified settings window
 - Added a setting for pausing when the emulator is not in focus
 - Customizable paths for save games, save states, screenshots and patches
 - Controller hotplugging
 - Ability to store save games and active cheats within savestates
Bugfixes:
 - ARM7: Fix sign of unaligned LDRSH
 - ARM7: Fix decoding of some ARM ALU instructions with shifters
 - Debugger: Fix watchpoints in gdb
 - GBA: Fix warnings when creating and loading savestates
 - GBA: Fix Iridion II savetype
 - GBA BIOS: Fix misaligned CpuSet
 - GBA Cheats: Fix cheats setting the Action Replay version
 - GBA Hardware: Fix GPIO on big endian
 - GBA Memory: Fix DMA register writing behavior